# aios-runtime

./: .gitignore  BLOG_POST.md  BLOG_POST_RELEASE.md  CHANGELOG.md  CHANGELOG_v1.1.md  DOCS_STRUCTURE.md  DOCS_UNIFICATION_REPORT.md  FEATURE_MAP.md  FUSION_ARCHITECTURE.md  IMPROVEMENT_REPORT.md  INTEGRATION_GUIDE.md  INTEGRATION_REPORT.md  LEARNING_AGENTS_ACTIVATION.md  PERPLEXITY_USAGE.md  PLATFORM_ADAPTATION_SUMMARY.md  PLATFORM_GUIDE.md  PROJECT_RESTRUCTURE.md  QUICKSTART.md  QUICKSTART_MACOS.md  README.md  README_OLD.md  RELEASE_NOTES_D6.md  RELEASE_NOTES_v1.2.md  RELEASE_NOTES_v1.3.md  RETRY_AND_INSTALL_REPORT.md  ROADMAP.md  TASK_QUEUE_INTEGRATION.md  UNIFIED_ARCHITECTURE.md  __init__.py  analyst_insights.json  benchmark.py  benchmark_report.json  cleanup_docs.py  code_review_v1_1.py  debug_list.py  demo_api_health.py  demo_file_monitor.py  demo_log_analysis.py  events.jsonl  execution_log.jsonl  (+19 more)
AIOS-Friend-Edition/: .gitignore  LICENSE  README.txt  aios.py  config.yaml  install.bat  pyproject.toml  requirements.txt  run.bat  setup.py
AIOS-Friend-Edition/aios/observability/metrics/: metrics_1772006611.json
AIOS-Friend-Edition/aios/observability/traces/: trace_d3bcf47b-16ce-46.json
AIOS-Friend-Edition/aios/plans/: plan_1772113668492.json
AIOS-Friend-Edition/core/: config.py  engine.py  llm.py  model_config.py  model_router_v2.py  playbook.py  reactor.py  reactor_v2.py  scheduler.py  task_executor.py  task_submitter.py  threshold_monitor.py  verifier.py
AIOS-Friend-Edition/demo_data/file_monitor/code/: script.py
AIOS-Friend-Edition/demo_data/file_monitor/documents/: readme.txt
AIOS-Friend-Edition/demo_data/log_analysis/playbooks/: playbook_MemoryError.json
AIOS-Friend-Edition/sdk/: memory.py  planning.py  superpowers_bridge.py  superpowers_bridge_v2.py  superpowers_v4.py
AIOS-Friend-Edition/sdk/.comm/: response.json
AIOS-Friend-Edition/sdk/tools/: perplexity_tool.py
AIOS-Friend-Edition/storage/: STORAGE_MANAGER_GUIDE.md
agents/: perplexity_researcher.json  self_heal_agent.json  smart_researcher.json  vm_manager_agent.py
archive/: ANALYSIS_EVIDENCE.md  AUTO_DISPATCHER_INJECTION_COMPLETE.md  CHECKLIST.md  CLEANUP_LOG.md  COMPLETION_REPORT_V05.md  COMPLETION_REPORT_v1.3.md  EVENTBUS_INTEGRATION.md  FINAL_DIRECTORY_STRUCTURE.md  FINAL_SUMMARY.md  FINAL_VALIDATION_REPORT.md  MIGRATION_LOG.md  OBSERVABILITY_INJECTION_REPORT.md  PERFORMANCE_SUMMARY.md  PHASE2_REPORT.md  PHASE3_REPORT.md  PRODUCTION_PERFORMANCE_REPORT.md  QUICK_START_REPORT.md  REACTOR_DEMO_REPORT.md  SELF_IMPROVING_DEMO_REPORT.md  TEST_REPORT_2026-02-25.md  agent_status_report.md  test_report_2026-02-24.md
core/: real_executor.py  task_executor.py  (+1 more)
(+193 files in other folders)
